# TestParticle.jl

./: .JuliaFormatter.toml  .gitignore  .travis.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  Manifest.toml  Project.toml  README.md  reproduce_issue.jl  versions.js
TestParticleMakie/: License  Project.toml  README.md
benchmark/: Project.toml  bench_serial.jl  benchmarks.jl  distributed_scaling.csv  plot_scaling_combined.jl  run_scaling.jl  run_scaling_distributed.jl  run_scaling_slurm.jl  run_scaling_split_threads.jl  run_scaling_threads.jl  runbench.jl  submit_slurm.sh  threads_scaling.csv  tune.json
bindings/python/: LICENSE  MANIFEST.in  README.md  pyproject.toml
bindings/python/src/testparticle/: __init__.py  juliapkg.json
bindings/python/tests/: test_wrapper.py
dev/: .documenter-siteinfo.json  404.html  api.html  hashmap.json  index.html  objects.inv  overview.html  plotfunctions.html  python_wrapper.html  search_index.js  tutorial.html
docs/: .gitignore  Manifest.toml  Project.toml  make.jl
examples/: demo_basic_single_particle.jl  demo_batsrus_3dstructured.jl  demo_currentsheet.jl  demo_electron_proton.jl  demo_ensemble.jl  demo_magneticbottle.jl  demo_magneticmirror.jl  demo_mirror.jl  demo_multiple.jl  demo_proton_dipole.jl  demo_tokamak.jl  demo_tokamak_coil.jl  demo_tokamak_profile.jl
ext/: README.md  TestParticleMakie.jl  TestParticleMeshesExt.jl  TestParticleRecursiveArrayToolsExt.jl  TestParticleVDFExt.jl  interactive.jl  typerecipes.jl
python/: MANIFEST.in  README.md  juliapkg.json  pyproject.toml
python/src/testparticle/: __init__.py
python/tests/: test_wrapper.py
src/: TestParticle.jl  adaptive_boris.jl  boris.jl  boris_gpu.jl  boris_kernel.jl  constants.jl  equations.jl  fieldline.jl  gc.jl  gc_solver.jl  gui.jl  hybrid.jl  multistep_boris.jl  precompile.jl  prepare.jl  pusher.jl  sampler.jl  types.jl
stable/: 404.html  api.html  hashmap.json  index.html  objects.inv  overview.html  plotfunctions.html  python_wrapper.html  tutorial.html
test/: Project.toml  dipole.jl  runtests.jl  test_Makie.jl  test_adaptive_boris.jl  test_adaptive_multistep_boris.jl  (+29 more)
(+13471 files in other folders)
