[project]
name = "testparticle-jl"
version = "0.1.0"
description = "Python wrapper for TestParticle.jl - trace charged particles in electromagnetic fields via Julia"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["test-particle", "julia", "space-physics", "plasma-physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["juliacall>=0.9.20"]

[project.urls]
Homepage = "https://henry2004y.github.io/TestParticle.jl/dev/
Repository = "https://github.com/henry2004y/TestParticle.jl"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/testparticle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
